--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -17,11 +17,10 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    width: 100vw;
-    height: 100vh;
     position: relative;
     overflow-x: hidden;
     color: #4A4A4A;
+    padding-bottom: 200px;
 }
 
 .title-text,
@@ -399,638 +398,12 @@ body {
 
 /* End Center Page Box Responsive Styles */
 
-/* Home Page Center Page Box Specific Styles */
-#home {
+/* Portfolio Page Center Page Box Specific Styles */
+#portfolio {
     margin-top: 200px;
 }
 
-#home .center-page-box-info {
-    align-items: baseline;
-}
-
-#home .large-home-text {
-    font-weight: 900;
-    font-size: 64px;
-}
-
-#home .large-home-text span {
-    font-style: italic;
-    color: var(--site-accent-color);
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-#home .home-button-grid {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    margin-top: 30px;
-    justify-content: center;
-}
-
-#home .home-button-grid a {
-    padding: 4px 20px;
-    color: white;
-    border-radius: 5px;
-    margin-right: 15px;
-    font-size: 24px;
-    font-weight: bold;
-    text-decoration: none;
-    margin-top: 15px;
-    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
-    transition: all 0.2s linear;
-}
-
-#home .home-button-grid a:hover {
-    opacity: 0.8;
-}
-
-#home .home-button-grid a.quote {
-    background-color: var(--site-accent-color);
-}
-
-#home .home-button-grid a.insta {
-    background-color: #962FBF;
-}
-
-#home .home-button-grid a.linkedin {
-    background-color: #D62976;
-}
-
-#home .home-button-grid a.tiktok {
-    background-color: #FA7E1E;
-}
-
-/* End Home Page Center Page Box Specific Styles */
-
-/* Home Page Center Page Box Specific Responsive Styles */
-@media (max-width: 814px) {
-    #home .home-button-grid {
-        margin-top: 8%;
-    }
-}
-
-@media (max-width: 695px) {
-    #home .large-home-text {
-        font-size: 50px;
-    }
-
-    #home .home-button-grid a {
-        font-size: 16px;
-        padding: 7px 20px;
-    }
-}
-
-@media (max-width: 589px) {
-    #home .large-home-text {
-        font-size: 40px;
-    }
-
-    #home .home-button-grid a {
-        font-size: 14px;
-        padding: 7px 20px;
-    }
-}
-
-@media (max-width: 563px) {
-    #home .home-button-grid {
-        justify-content: space-between;
-    }
-
-    #home .home-button-grid a {
-        font-size: 16px;
-        padding: 7px 20px;
-        margin-right: 0;
-    }
-
-    #home .home-button-grid a.quote {
-        width: 100%;
-        text-align: center;
-    }
-}
-
-@media (max-width: 487px) {
-    #home .large-home-text {
-        font-size: 30px;
-    }
-
-    #home .home-button-grid a {
-        font-size: 12px;
-        padding: 7px 15px;
-    }
-}
-
-@media (max-width: 405px) {
-    #home .large-home-text {
-        font-size: 25px;
-    }
-
-    #home .home-button-grid a {
-        font-size: 12px;
-        padding: 7px 15px;
-    }
-
-    #home .home-button-grid {
-        margin-top: 5%;
-    }
-}
-
-/* End Home Page Center Page Box Specific Responsive Styles */
-
-/* About Page Center Page Box Specific Styles */
-#about {
-    justify-content: flex-start;
-}
-
-#about .about-content {
-    width: 100%;
-}
-
-#about .about-content p {
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 5px;
-    font-weight: 700;
-    font-size: 18px;
-    color: #4A4A4A;
-    padding: 15px;
-    margin-bottom: calc(var(--uniform-padding) * 1px);
-}
-
-#about .about-content p span {
-    color: var(--site-accent-color);
-    font-style: italic;
-    font-weight: 900;
-}
-
-#about .about-content .about-gallery {
-    display: flex;
-    align-items: flex-start;
-    position: relative;
-    overflow: hidden;
-}
-
-#about .about-content .about-gallery img {
-    width: 31%;
-    height: auto;
-    transition: all 0.2s linear;
-}
-
-#about .about-content .about-gallery img:nth-child(n + 2) {
-    margin: 0 1.75%;
-}
-
-#about .about-content .about-gallery img:first-child {
-    margin-right: 1.75%;
-}
-
-#about .about-content .gallery-buttons {
-    margin-top: 25px;
-    text-align: center;
-}
-
-#about .about-content .gallery-buttons button,
-#about .about-content .gallery-buttons button:focus {
-    border: none;
-    background: transparent;
-    outline: none;
-    margin: 0 20px;
-    transition: all 0.1s linear;
-}
-
-/* End About Page Center Page Box Specific Styles */
-
-/* About Page Center Page Box Specific Responsive Styles */
-@media (max-width: 519px) {
-    #about .about-content .about-gallery img {
-        width: 48.25%;
-    }
-}
-
-@media (max-width: 449px) {
-    #about .about-content .about-gallery img {
-        width: 100%;
-    }
-}
-
-/* End About Page Center Page Box Specific Responsive Styles */
-
-/* Portfolio Page Center Page Box Specific Styles */
-#portfolio .portfolio-content {
-    width: 100%;
-}
-
-#portfolio .portfolio-content > p {
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 5px;
-    font-weight: 700;
-    font-size: 18px;
-    padding: 15px;
-    margin-bottom: 25px;
-}
-
-#portfolio .portfolio-content > p span {
-    color: var(--site-accent-color);
-    font-style: italic;
-    font-weight: 900;
-}
-
-#portfolio .portfolio-content .stats {
-    display: flex;
-    margin-bottom: 30px;
-}
-
-#portfolio .portfolio-content .stats .sub-box {
-    display: flex;
-    width: 50%;
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 5px;
-    padding: 5px 20px;
-}
-
-#portfolio .portfolio-content .stats .sub-box p {
-    margin: 0;
-}
-
-#portfolio .portfolio-content .stats .sub-box#ig-effects {
-    margin-right: 30px;
-}
-
-#portfolio .portfolio-content .stats .sub-box#ig-effects .large-text {
-    font-size: 64px;
-    font-weight: 900;
-    color: var(--site-accent-color);
-    margin: auto 0;
-}
-
-#portfolio .portfolio-content .stats .sub-box#ig-effects .sub-text {
-    font-size: 24px;
-    font-weight: 900;
-    line-height: 24px;
-    margin: auto 0 auto 20px;
-}
-
-#portfolio .portfolio-content .stats .sub-box#impressions {
-    flex-direction: column;
-}
-
-#portfolio .portfolio-content .stats .sub-box#impressions .large-text {
-    font-weight: 900;
-    font-size: 48px;
-    color: #4F5BD5;
-    line-height: 41px;
-    margin-top: auto;
-}
-
-#portfolio .portfolio-content .stats .sub-box#impressions .sub-text {
-    font-weight: 900;
-    font-size: 24px;
-    line-height: 28px;
-    margin-bottom: auto;
-}
-
-#portfolio .portfolio-content .filter-highlight {
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 5px;
-    padding: 30px;
-    margin-bottom: 25px;
-    cursor: pointer;
-    transition: all 0.2s linear;
-}
-
-#portfolio .portfolio-content .filter-highlight:hover {
-    transform: scale(1.015);
-}
-
-#portfolio .portfolio-content .filter-highlight .filter-header {
-    font-weight: 900;
-    font-size: 24px;
-}
-
-#portfolio .portfolio-content .filter-highlight .filter-header span {
-    color: var(--site-accent-color);
-}
-
-#portfolio .portfolio-content .filter-highlight .highlight-gallery {
-    display: flex;
-    justify-content: space-between;
-    overflow-x: auto;
-    width: 100%;
-}
-
-#portfolio .portfolio-content .filter-highlight .highlight-gallery .gallery-item {
-    max-width: 150px;
-}
-
-#portfolio .portfolio-content .filter-highlight .highlight-gallery .gallery-item > img {
-    width: 100%;
-}
-
-#portfolio .portfolio-content .filter-highlight .highlight-gallery .gallery-item {
-    width: 112px;
-    min-width: 112px;
-}
-
-#portfolio .portfolio-content .filter-highlight .highlight-gallery .gallery-item:first-child {
-    width: 144.9px;
-    min-width: 144.9px;
-}
-
-#portfolio .portfolio-content .filter-highlight .highlight-gallery .gallery-item p {
-    margin: 0;
-    text-align: center;
-}
-
-#portfolio .portfolio-content .filter-highlight .highlight-gallery .gallery-item .tw-handle {
-    font-weight: 500;
-    font-size: 12px;
-    margin-top: 5px;
-    display: flex;
-}
-
-#portfolio .portfolio-content .filter-highlight .highlight-gallery .gallery-item .tw-handle span {
-    margin-left: auto;
-    margin-right: 3px;
-}
-
-#portfolio .portfolio-content .filter-highlight .highlight-gallery .gallery-item .tw-handle img {
-    margin: auto auto auto 0;
-}
-
-#portfolio .portfolio-content .filter-highlight .highlight-gallery .gallery-item .follower-count {
-    font-size: 9px;
-    font-style: italic;
-}
-
-/* End Portfolio Page Center Page Box Specific Styles */
-
-/* Portfolio Page Center Page Box Specific Responsive Styles */
-@media (max-width: 799px) {
-    #portfolio .portfolio-content .filter-highlight .highlight-gallery {
-        justify-content: flex-start;
-    }
-
-    #portfolio .portfolio-content .filter-highlight .highlight-gallery .gallery-item:nth-child(n + 2) {
-        margin-left: 20px;
-    }
-}
-
-@media (max-width: 793px) {
-    #portfolio .portfolio-content .stats {
-        flex-direction: column;
-    }
-
-    #portfolio .portfolio-content .stats .sub-box {
-        width: 100%;
-        height: 96px;
-        margin-bottom: 25px;
-    }
-
-    #portfolio .portfolio-content .stats .sub-box#ig-effects {
-        flex-direction: column;
-    }
-
-    #portfolio .portfolio-content .stats .sub-box#ig-effects .large-text {
-        font-size: 48px;
-        line-height: 41px;
-    }
-
-    #portfolio .portfolio-content .stats .sub-box#ig-effects .large-text,
-    #portfolio .portfolio-content .stats .sub-box#ig-effects .sub-text,
-    #portfolio .portfolio-content .stats .sub-box#impressions .large-text,
-    #portfolio .portfolio-content .stats .sub-box#impressions .sub-text {
-        margin-left: auto;
-        margin-right: auto;
-        text-align: center;
-    }
-}
-
-@media (max-width: 519px) {
-    #portfolio .portfolio-content .stats .sub-box {
-        height: auto;
-    }
-
-    #portfolio .portfolio-content .stats .sub-box .large-text {
-        font-size: 36px !important;
-        margin-top: auto !important;
-        margin-bottom: 0 !important;
-    }
-
-    #portfolio .portfolio-content .stats .sub-box .sub-text {
-        font-size: 16px !important;
-        margin-bottom: auto !important;
-        margin-top: 0 !important;
-    }
-
-    #portfolio .portfolio-content .filter-highlight .filter-header {
-        text-align: center;
-    }
-
-    #portfolio .portfolio-content .filter-highlight .highlight-gallery {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    #portfolio .portfolio-content .filter-highlight .highlight-gallery .gallery-item {
-        margin-left: 0 !important;
-        margin-bottom: 20px;
-    }
-}
-
-@media (max-width: 365px) {
-    #portfolio .portfolio-content .filter-highlight .highlight-gallery .gallery-item:first-child,
-    #portfolio .portfolio-content .filter-highlight .highlight-gallery .gallery-item img {
-        max-width: 100%;
-    }
-
-    #portfolio .portfolio-content .filter-highlight .highlight-gallery .gallery-item {
-        max-width: 77%;
-    }
-
-    #portfolio .portfolio-content .filter-highlight .filter-header {
-        font-size: 20px;
-    }
-}
-
-@media (max-width: 341px) {
-    #portfolio .portfolio-content .stats .sub-box .large-text {
-        font-size: 30px !important;
-    }
-
-    #portfolio .portfolio-content .stats .sub-box .sub-text {
-        font-size: 14px !important;
-    }
-}
-
-@media (max-width: 329px) {
-    #portfolio .portfolio-content .filter-highlight .filter-header {
-        font-size: 18px;
-    }
-}
-
-/* End Portfolio Page Center Page Box Specific Responsive Styles */
-
-/* Client Page Center Page Box Specific Styles */
-#clients .client-gallery {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 495px;
-    justify-content: space-between;
-}
-
-#clients .client-gallery img {
-    margin-bottom: 7.5px;
-    width: 150px;
-    cursor: pointer;
-    transition: all 0.2s linear;
-}
-
-#clients .client-gallery img:hover {
-    transform: scale(1.05);
-}
-
-/* End Client Page Center Page Box Specific Styles */
-
-/* Client Page Center Page Box Specific Responsive Styles */
-@media (max-width: 649px) {
-    #clients .client-gallery {
-        display: flex;
-        flex-wrap: wrap;
-        max-width: 495px;
-        justify-content: space-around;
-    }
-}
-
-/* End Client Page Center Page Box Specific Responsive Styles */
-
-/* Contact Page Center Page Box Specific Styles */
-#contact form {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-items: center;
-}
-
-#contact form input,
-#contact form textarea {
-    max-width: 500px;
-    width: 100%;
-    border: none;
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 5px;
-    margin-bottom: 10px;
-    padding: 6px 15px;
-    font-size: 12px;
-    color: #4A4A4A;
-}
-
-#contact form input:focus,
-#contact form textarea:focus {
-    outline: rgba(79, 91, 213, 0.5) auto 1px;
-}
-
-#contact form button {
-    padding: 4px 20px;
-    color: white;
-    border-radius: 5px;
-    margin-right: 15px;
-    font-size: 14px;
-    font-weight: bold;
-    text-decoration: none;
-    margin-top: 15px;
-    background-color: var(--site-accent-color);
-    border: none;
-    transition: all 0.2s linear;
-}
-
-#contact form button:hover {
-    opacity: 0.8;
-}
-
-::placeholder {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    color: rgba(74, 74, 74, 0.5);
-}
-
-/* End Contact Page Center Page Box Specific Styles */
-
-/* Contact Page Center Page Box Specific Responsive Styles */
-
-/* End Contact Page Center Page Box Specific Responsive Styles */
-
-/* Services Page Center Page Box Specific Styles */
-#services .service-grid {
-    display: flex;
-    flex-wrap: wrap;
-    height: 100%;
-}
-
-#services .service-grid .service-item {
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 5px;
-    margin: 0 20px;
-    padding: 30px 14px;
-    text-align: center;
-    width: 150px;
-    display: flex;
-    flex-direction: column;
-}
-
-#services .service-grid .service-item:first-child {
-    margin-left: 0;
-}
-
-#services .service-grid .service-item:last-child {
-    margin-right: 0;
-}
-
-#services .service-grid .service-item img {
-    height: 90px;
-    margin-bottom: 10px;
-}
-
-#services .service-grid .service-item h3 {
-    font-weight: 800;
-    font-size: 14px;
-}
-
-#services .service-grid .service-item p {
-    font-weight: 600;
-    font-size: 13px;
-    margin-top: auto;
-}
-
-/* End Services Page Center Page Box Specific Styles */
-
-/* Services Page Center Page Box Specific Responsive Styles */
-@media (max-width: 729px) {
-    #services .service-grid {
-        flex-direction: column;
-        width: 100%;
-        max-width: 481px;
-    }
-
-    #services .service-grid .service-item {
-        width: 100%;
-        margin: 20px 0;
-        padding-left: 20%;
-        padding-right: 20%;
-    }
-
-    #services .service-grid .service-item:first-child {
-        margin-top: 0;
-    }
-    
-    #services .service-grid .service-item:last-child {
-        margin-bottom: 0;
-    }
-}
-
-/* End Services Page Center Page Box Specific Responsive Styles */
-
-/* Portfolio Page Center Page Box Specific Styles */
-/* #portfolio .tabs {
+#portfolio .tabs {
     margin-top: -41px;
     margin-bottom: 16px;
     display: flex;
@@ -1135,7 +508,7 @@ body {
 
 #portfolio .portfolio-grid .item img {
     width: 100%;
-} */
+}
 
 /*filter: drop-shadow(0px 0px 20px rgba(0, 0, 0, 0.5));*/
 
@@ -1143,90 +516,4 @@ body {
 
 /* Portfolio Page Center Page Box Specific Responsive Styles */
 
-
 /* End Portfolio Page Center Page Box Specific Responsive Styles */
-
-/* Press Page Center Page Box Specific Styles */
-#press {
-    max-height: calc(100% - (var(--navbar-total-height) * 1px) - (var(--uniform-padding) * 2px));
-    overflow-y: auto;
-}
-
-#press .press-grid {
-    width: 100%;
-}
-
-#press .press-grid .large-box {
-    margin: 0 auto 20px auto;
-}
-
-#press .press-grid .large-box {
-    cursor: pointer;
-    transition: all 0.1s linear;
-}
-
-#press .press-grid .large-box:hover {
-    transform: scale(1.05);
-}
-
-#press .large-box .title {
-    font-size: 14px;
-    color: initial;
-}
-
-#press .large-box a {
-    color: inherit;
-}
-
-#press .large-box .subtitle {
-    font-size: 12px;
-    color: initial;
-}
-
-#press .large-box .extra-info {
-    font-size: 14px;
-    color: #AAAABA;
-    font-weight: 500;
-}
-
-/* End Experience/Press Page Center Page Box Specific Styles */
-
-/* Experience/Press Page Center Page Box Specific Responsive Styles */
-@media (max-width: 814px) {
-    #experience .experiences-grid > *,
-    #press .press-grid > * {
-        margin-bottom: 20px;
-    }
-}
-
-/* End Experience/Press Page Center Page Box Specific Responsive Styles */
-
-/* Social Media Page Center Page Box Specific Styles */
-#social .icons a {
-    margin: 7.5px;
-    transition: all 0.2s linear;
-}
-
-#social .icons a:hover {
-    text-decoration: none;
-}
-
-#social .icons a img {
-    transition: all 0.2s linear;
-}
-
-#social .icons a:hover img {
-    transform: scale(1.05);
-}
-
-/* End Social Media Page Center Page Box Specific Styles */
-
-/* Social Media Page Center Page Box Specific Responsive Styles */
-
-@media (max-width: 337px) {
-    #social .icons {
-        display: flex;
-    }
-}
-
-/* End Social Media Page Center Page Box Specific Responsive Styles */
