--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@ body {
   background: black;
   color: white;
   font-family: Roboto;
+  padding: 0 50px !important;
+}
+
+a {
+  cursor: pointer;
 }
 
 .site-section {
@@ -18,6 +23,7 @@ body {
   height: 100%;
   max-width: 928px;
   margin: auto;
+  position: relative;
 }
 
 .site-section .section-container .section-info {
@@ -29,6 +35,9 @@ body {
 
 .site-section .section-container .section-info h1 {
   margin: 0;
+  font-weight: 900;
+  font-size: 96px;
+  line-height: 112px;
 }
 
 .site-section .section-container .section-info p.description {
@@ -47,6 +56,33 @@ body {
   color: #999999;
 }
 
+@media (max-width: 912px) {
+  .site-section .section-container .section-info h1 {
+    font-size: 60px;
+    line-height: initial;
+  }
+
+  .site-section .section-container .section-info p.description {
+    font-size: 20px;
+    margin-top: 75px;
+  }
+}
+
+@media (max-width: 535px) {
+  body {
+    padding: 0 25px !important;
+  }
+
+  .site-section .section-container .section-info h1 {
+    font-size: 34px;
+  }
+
+  .site-section .section-container .section-info p.description {
+    font-size: 14px;
+    margin-top: 30px;
+  }
+}
+
 /* End General Styles */
 
 /* Navbar Styles */
@@ -59,6 +95,7 @@ body {
 .navbar-brand {
   font-weight: 900;
   font-size: 24px;
+  margin-right: 0;
 }
 
 .navbar-brand.mobile {
@@ -71,6 +108,7 @@ body {
 
 .navbar-dark .navbar-toggler {
   border: none;
+  padding: 0;
 }
 
 .navbar-dark .navbar-toggler-icon {
@@ -78,6 +116,11 @@ body {
 }
 
 @media (max-width: 535px) {
+  .navbar {
+    padding: 25px;
+    padding-bottom: 0;
+  }
+
   .navbar-brand.mobile {
     display: block;
   }
@@ -91,27 +134,26 @@ body {
 
 /* Landing Page Styles */
 
-#landing {
+.landing {
   position: relative;
 }
 
-#landing .section-info {
+.landing .section-container .section-info {
   align-items: center;
 }
 
-#landing .section-info h1 {
-  font-weight: 900;
+.landing .section-container .section-info h1 {
   font-size: 72px;
   margin-bottom: 25px;
 }
 
-#landing .section-info ul {
+.landing .section-container .section-info ul {
   display: flex;
   list-style: none;
   padding: 0;
 }
 
-#landing .section-info ul li {
+.landing .section-container .section-info ul li {
   font-weight: 900;
   font-size: 24px;
   color: #555555;
@@ -120,11 +162,11 @@ body {
   transition: color 0.2s linear;
 }
 
-#landing .section-info ul li:hover {
+.landing .section-container .section-info ul li:hover {
   color: #999999;
 }
 
-#landing > img {
+.landing img.downarrow {
   position: absolute;
   bottom: 32px;
   left: calc(50% - 25px);
@@ -143,113 +185,339 @@ body {
 }
 
 @media (max-width: 535px) {
-  #landing .section-info h1 {
-    font-size: 48px;
+  .landing .section-container .section-info h1 {
+    font-size: 46px;
   }
 
-  #landing .section-info ul {
+  .landing .section-container .section-info ul {
     display: none;
   }
 }
 
 /* End Landing Page Styles */
 
-/* About Page 1 Styles */
-
-#about1 .section-container h1 {
-  font-weight: 900;
-  font-size: 96px;
-  line-height: 112px;
-}
-
-/* End About Page 1 Styles */
-
 /* About Page 2 Styles */
 
-#about2 .section-container h1 {
-  font-weight: 900;
-  font-size: 120px;
-  line-height: 141px;
-}
-
-#about2 .section-container h2 {
+.about2 .section-container h2 {
   font-weight: 900;
   font-size: 48px;
   line-height: 56px;
+  margin: 0;
+}
+
+@media (max-width: 912px) {
+  .about2 .section-container h2 {
+    font-size: 32px;
+    line-height: initial;
+  }
 }
 
 /* End About Page 2 Styles */
 
 /* Work Page Styles */
 
-#work .section-container h1 {
-  font-weight: 900;
-  font-size: 96px;
-  line-height: 112px;
-}
-
-#work .section-container .section-info .work-grid {
+.work .section-container .section-info .work-grid {
   margin-top: 50px;
 }
 
-#work .section-container .section-info .work-grid img {
-  margin-right: 4%;
+.work .section-container .section-info .work-grid img {
+  margin-right: 3.8%;
   margin-bottom: 30px;
   width: 16.16%;
+  cursor: pointer;
+  transition: all 0.2s linear;
 }
 
-#work .section-container .section-info .work-grid img:nth-child(5n) {
+.work .section-container .section-info .work-grid img:hover {
+  transform: scale(1.05);
+}
+
+.work .section-container .section-info .work-grid img:nth-child(5n) {
   margin-right: 0;
+}
+
+.work .section-container #work-popup {
+  width: 100%;
+  height: 100%;
+  max-width: 928px;
+  max-height: 600px;
+  background-color: #191919;
+  opacity: 0;
+  position: absolute;
+  margin: auto;
+  padding: 34px;
+  padding-bottom: 80px;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: -1;
+  transition: all 0.2s linear;
+}
+
+.work .section-container #work-popup.open {
+  z-index: 1;
+  opacity: 1;
+}
+
+.work .section-container #work-popup .popup-header {
+  display: flex;
+}
+
+.work .section-container #work-popup .popup-header img {
+  margin-left: auto;
+  cursor: pointer;
+}
+
+.work .section-container #work-popup .content {
+  display: flex;
+  height: 100%;
+  padding-top: 25px;
+}
+
+.work .section-container #work-popup .content .demo {
+  margin-right: 22px;
+  margin-left: 40px;
+}
+
+.work .section-container #work-popup .content .demo,
+.work .section-container #work-popup .content .demo video {
+  height: 100%;
+}
+
+.work .section-container #work-popup .content .data .title {
+  font-weight: 900;
+  font-size: 64px;
+  line-height: 75px;
+  margin: 0;
+}
+
+.work .section-container #work-popup .content .data .data-grid {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 25px;
+}
+
+.work .section-container #work-popup .content .data .data-grid .data-grid-item {
+  width: 50%;
+  margin-bottom: 16px;
+}
+
+.work .section-container #work-popup .content .data .data-grid .data-grid-item h3 {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 42px;
+  margin: 0;
+}
+
+.work .section-container #work-popup .content .data .data-grid .data-grid-item h4 {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  margin: 0;
+}
+
+.work .section-container #work-popup .content .data .description {
+  margin-top: 27px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  color: #555555;
+  padding-top: 14px;
+  border-top: 2px solid #555555;
+}
+
+@media (max-width: 932px) {
+  .work .section-container #work-popup .content .data .title {
+    font-size: 45px;
+    line-height: initial;
+  }
+
+  .work .section-container #work-popup .content .data .description {
+    font-size: 18px;
+    line-height: initial;
+  }
+
+  .work .section-container #work-popup .content .data .data-grid .data-grid-item h3 {
+    font-size: 24px;
+    line-height: initial;
+  }
+  
+  .work .section-container #work-popup .content .data .data-grid .data-grid-item h4 {
+    font-size: 16px;
+    line-height: initial;
+  }
+
+  .work .section-container #work-popup {
+    max-height: 500px;
+  }
+}
+
+@media (max-width: 736px) {
+  .work .section-container #work-popup .content .data .title {
+    font-size: 30px;
+    line-height: initial;
+  }
+
+  .work .section-container #work-popup .content .data .description {
+    font-size: 14px;
+    line-height: initial;
+  }
+
+  .work .section-container #work-popup .content .data .data-grid .data-grid-item h3 {
+    font-size: 20px;
+    line-height: initial;
+  }
+  
+  .work .section-container #work-popup .content .data .data-grid .data-grid-item h4 {
+    font-size: 14px;
+    line-height: initial;
+  }
+
+  .work .section-container #work-popup {
+    max-height: 450px;
+  }
+}
+
+@media (max-width: 602px) {
+  .work .section-container #work-popup .content .data .title {
+    font-size: 24px;
+    line-height: initial;
+  }
+
+  .work .section-container #work-popup .content .data .description {
+    font-size: 14px;
+    line-height: initial;
+  }
+
+  .work .section-container #work-popup .content .data .data-grid .data-grid-item h3 {
+    font-size: 18px;
+    line-height: initial;
+  }
+  
+  .work .section-container #work-popup .content .data .data-grid .data-grid-item h4 {
+    font-size: 14px;
+    line-height: initial;
+  }
+
+  .work .section-container #work-popup {
+    max-height: 100%;
+    max-width: 100%;
+    overflow-y: scroll;
+    height: calc(100% - 175px);
+    top: 125px;
+    bottom: auto;
+  }
+
+  .work .section-container #work-popup .content {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .work .section-container #work-popup .content .demo,
+  .work .section-container #work-popup .content .demo video {
+    height: auto;
+    width: 100%;
+    margin: 0;
+  }
+}
+
+@media (max-width: 535px) {
+  .work .section-container .section-info .work-grid {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 30px;
+  }
+
+  .work .section-container .section-info .work-grid img {
+    width: 18%;
+    margin-right: 25px !important;
+  }
+}
+
+@media (max-width: 456px) {
+  .work .section-container .section-info .work-grid img {
+    width: 21.9%;
+    margin-right: 8.9%;
+  }
+}
+
+@media (max-width: 374px) {
+  .work .section-container #work-popup .content .data .title {
+    text-align: center;
+    font-size: 30px;
+  }
+
+  .work .section-container #work-popup .content .data .data-grid .data-grid-item {
+    text-align: center;
+    width: 100%;
+  }
+
+  .work .section-container #work-popup .content .data .data-grid .data-grid-item h3 {
+    font-size: 22px;
+    line-height: initial;
+  }
+  
+  .work .section-container #work-popup .content .data .data-grid .data-grid-item h4 {
+    font-size: 16px;
+    line-height: initial;
+  }
 }
 
 /* End Work Page Styles */
 
 /* Clients Page Styles */
 
-#clients .section-container h1 {
-  font-weight: 900;
-  font-size: 96px;
-  line-height: 112px;
-}
-
-#clients .section-container .section-info .client-grid {
+.clients .section-container .section-info .client-grid {
   margin-top: 50px;
 }
 
-#clients .section-container .section-info .client-grid img {
-  margin-right: 4.2%;
+.clients .section-container .section-info .client-grid img {
+  margin-right: 3.75%;
   margin-bottom: 20px;
   width: 21.5%;
 }
 
-#clients .section-container .section-info .client-grid img:nth-child(4n) {
+.clients .section-container .section-info .client-grid img:nth-child(4n) {
   margin-right: 0;
+}
+
+@media (max-width: 535px) {
+  .clients .section-container .section-info .client-grid {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 30px;
+  }
+  
+  .clients .section-container .section-info .client-grid img {
+    margin-right: 37px !important;
+    margin-bottom: 20px;
+    width: 35.5%;
+  }
+
+  .clients .section-container .section-info .client-grid img:nth-child(2n) {
+    margin-right: 0;
+  }
 }
 
 /* End Clients Page Styles */
 
 /* Services Page Styles */
 
-#services .section-container h1 {
-  font-weight: 900;
-  font-size: 96px;
-  line-height: 112px;
-}
-
-#services .section-container .section-info .service-grid {
+.services .section-container .section-info .service-grid {
   display: flex;
   margin-top: 100px;
 }
 
-#services .section-container .section-info .service-grid .service {
+.services .section-container .section-info .service-grid .service {
   width: 26.9%;
 }
 
-#services .section-container .section-info .service-grid .service:nth-child(3n + 2) {
+.services .section-container .section-info .service-grid .service:nth-child(3n + 2) {
   margin: 0 auto;
 }
 
-#services .section-container .section-info .service-grid .service h4 {
+.services .section-container .section-info .service-grid .service h4 {
   font-weight: 500;
   font-size: 24px;
   line-height: 28px;
@@ -259,31 +527,53 @@ body {
   margin-bottom: 30px;
 }
 
-#services .section-container .section-info .service-grid .service p {
+.services .section-container .section-info .service-grid .service p {
   font-weight: 500;
   font-size: 24px;
   line-height: 28px;
   color: #555555;
 }
 
+@media (max-width: 912px) {
+  .services .section-container .section-info .service-grid .service p {
+    font-size: 20px;
+    line-height: initial;
+  }
+}
+
+@media (max-width: 535px) {
+  .services .section-container .section-info .service-grid {
+    margin-top: 30px;
+    flex-direction: column;
+  }
+
+  .services .section-container .section-info .service-grid .service {
+    width: 100%;
+  }
+
+  .services .section-container .section-info .service-grid .service h4,
+  .services .section-container .section-info .service-grid .service p {
+    font-size: 14px;
+    line-height: initial;
+  }
+
+  .services .section-container .section-info .service-grid .service h4 {
+    margin-bottom: 11px;
+  }
+}
+
 /* End Services Page Styles */
 
 /* Contact Page Styles */
 
-#contact .section-container h1 {
-  font-weight: 900;
-  font-size: 96px;
-  line-height: 112px;
-}
-
-#contact .section-container .section-info form {
+.contact .section-container .section-info form {
   display: flex;
   flex-direction: column;
   margin-top: 100px;
 }
 
-#contact .section-container .section-info form input,
-#contact .section-container .section-info form textarea {
+.contact .section-container .section-info form input,
+.contact .section-container .section-info form textarea {
   background: none;
   border: none;
   border-bottom: 2px solid #555555;
@@ -292,13 +582,13 @@ body {
   transition: all 0.2s linear;
 }
 
-#contact .section-container .section-info form input:focus,
-#contact .section-container .section-info form textarea:focus {
+.contact .section-container .section-info form input:focus,
+.contact .section-container .section-info form textarea:focus {
   border-color: white;
   outline: none;
 }
 
-#contact .section-container .section-info form textarea {
+.contact .section-container .section-info form textarea {
   height: 100px;
   resize: none;
 }
@@ -310,7 +600,7 @@ body {
   color: #888888;
 }
 
-#contact .section-container .section-info form button {
+.contact .section-container .section-info form button {
   width: fit-content;
   background: #191919;
   font-weight: 500;
@@ -319,6 +609,18 @@ body {
   padding: 12px 23px;
   color: white;
   border: none;
+}
+
+@media (max-width: 912px) {
+  .contact .section-container .section-info form {
+    margin-top: 75px;
+  }
+}
+
+@media (max-width: 535px) {
+  .contact .section-container .section-info form {
+    margin-top: 30px;
+  }
 }
 
 /* End Contact Page Styles */
