--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,8 @@ a {
   width: fit-content;
   border-top: 2px solid #555555;
   padding-top: 7px;
-  margin-top: 100px;
+  margin-top: 75px;
+  margin-bottom: 0;
   font-weight: 500;
   font-size: 24px;
   line-height: 28px;
@@ -96,10 +97,10 @@ a {
 .navbar-nav {
   text-align: center;
   background: black;
+  padding-bottom: 1rem;
 }
 
 .nav-link {
-  padding: 0.3rem 1rem;
   transition: all 0.2s linear;
 }
 
@@ -156,6 +157,13 @@ a {
 .landing .section-container .section-info h1 {
   font-size: 72px;
   margin-bottom: 25px;
+  line-height: initial;
+  color: black;
+  transition: all 2s linear;
+}
+
+.landing .section-container .section-info h1.loaded {
+  color: white;
 }
 
 .landing .section-container .section-info ul {
@@ -166,7 +174,7 @@ a {
 
 .landing .section-container .section-info ul li {
   font-weight: 900;
-  font-size: 24px;
+  font-size: 21px;
   color: #555555;
   margin: 0 12.5px;
   cursor: pointer;
@@ -234,7 +242,7 @@ a {
 .work .section-container .section-info .work-grid img {
   margin-right: 3.8%;
   margin-bottom: 30px;
-  width: 16.16%;
+  width: 14.16%;
   cursor: pointer;
   transition: all 0.2s linear;
 }
